feat: add source label

--- a/cyberchef/Dockerfile
+++ b/cyberchef/Dockerfile
@@ -2,6 +2,7 @@
 FROM node:18-alpine AS build
 
 ENV VERSION=v10.19.4
+LABEL org.opencontainers.image.source="https://github.com/airman604/tools"
 
 WORKDIR /src
 RUN apk add --no-cache git
