feat: add request-baskets

--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -23,6 +23,7 @@ jobs:
       matrix:
         image:
           - cyberchef
+          - request-baskets
 
     steps:
       - name: Check out the repo
