feat: add excalidraw

--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -24,6 +24,7 @@ jobs:
         image:
           - cyberchef
           - request-baskets
+          - excalidraw
 
     steps:
       - name: Check out the repo
