feat: add pwpush

--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -25,6 +25,7 @@ jobs:
           - cyberchef
           - request-baskets
           - excalidraw
+          - pwpush
 
     steps:
       - name: Check out the repo
