feat: add fizzy to the workflow

--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -26,6 +26,7 @@ jobs:
           - request-baskets
           - excalidraw
           - pwpush
+          - fizzy
 
     steps:
       - name: Check out the repo
