feat: add smee.io

--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -27,6 +27,7 @@ jobs:
           - excalidraw
           - pwpush
           - fizzy
+          - smee.io
 
     steps:
       - name: Check out the repo
